--- a/src/main/resources/com/csia/anish/controller/addStudent.fxml
+++ b/src/main/resources/com/csia/anish/controller/addStudent.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.csia.anish.controller.AddNewStudent">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.csia.anish.controller.AddNewStudentController">
 
     <children>
       <Label layoutX="200.0" layoutY="14.0" prefHeight="51.0" prefWidth="287.0" text="Add Student" textAlignment="CENTER">
