--- a/src/main/resources/com/csia/anish/controller/allAppointment.fxml
+++ b/src/main/resources/com/csia/anish/controller/allAppointment.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="611.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.csia.anish.controller.ViewAppointmentController">
    <children>
       <HBox layoutX="7.0" layoutY="7.0" prefHeight="48.0" prefWidth="367.0" />
