--- a/src/main/resources/com/csia/anish/controller/homepage.fxml
+++ b/src/main/resources/com/csia/anish/controller/homepage.fxml
@@ -33,12 +33,10 @@
 -->
 
 <?import javafx.scene.AmbientLight?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.csia.anish.controller.HomePageController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="404.0" prefWidth="640.0">
