--- a/src/main/resources/com/csia/anish/controller/updateStudent.fxml
+++ b/src/main/resources/com/csia/anish/controller/updateStudent.fxml
@@ -32,14 +32,10 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="662.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.csia.anish.controller.ModifyStudentController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="181.0" layoutY="14.0" prefHeight="27.0" prefWidth="302.0" text="Update Student" textAlignment="CENTER">
